--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -49,6 +49,7 @@
             </div>
             <div class="relative -mt-6 hidden md:block mx-auto md:max-w-3/5 lg:max-w-3/4 bg-fgreen-600 rounded-2xl py-1">
                 <div class="flex items-baseline justify-center space-x-4 uppercase">
+                    <a href="{% url 'index' %}" class="text-fgray-50 hover:bg-fgreen-500 hover:text-white px-3 py-2 rounded-md text-sm font-normal">Startseite</a>
                     <div class="relative group">
                         <a href="#" class="text-fgray-50 hover:bg-fgreen-500 hover:text-white px-3 py-2 rounded-md text-sm font-normal">Challenges</a>
                         <div class="absolute left-0 w-full bg-fgreen-600 rounded-b-lg opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-opacity duration-300 pointer-events-none group-hover:pointer-events-auto">
@@ -69,6 +70,7 @@
                     </button>
                 </div>
                 <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3 text-fgray-50">
+                    <a href="{% url 'index' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Startseite</a>
                     <div class="relative">
                         <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Challenges</a>
                         <div class="ml-4 mt-1">
