--- a/meetups/templates/meetups/meetup_list.html
+++ b/meetups/templates/meetups/meetup_list.html
@@ -1,24 +1,39 @@
 {% extends 'main/base.html' %}
 
 {% block content %}
-<div class="bg-fgreen-800 rounded-lg mt-12 mb-8 mx-auto w-full max-w-4xl">
-    <div class="shadow-md rounded px-8 pt-6 pb-8 mb-4">
-        <h1 class="text-2xl font-bold mb-4 text-center">Unsere Treffen</h1>
-        
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 gap-4">
-            {% for meetup in meetups %}
-            <div class="bg-gray-800 p-4 flex flex-col justify-center items-start">
+<h1 class="text-2xl font-bold mb-4 text- mt-12 text-center">Unsere Treffen</h1>
+<div class="bg-fgreen-600 w-screen text-fgay-50 pt-12 pb-16 mt-12">
+    <div class="text-fgray-50 pb-16 mb-8">
+        <h2 class="text-3xl font-normal text-white uppercase text-center mb-8">Unsere nächsten Treffen</h2>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mx-24">
+            {% for meetup in upcoming_meetups %}
+            <div class="bg-gray-800 p-4 flex flex-col justify-start md:justify-center items-start">
                 <h2 class="text-white text-lg font-bold">{{ meetup.title }}</h2>
-                <p class="text-gray-400">{{ meetup.date|date:"d M, Y" }}</p>
-                
-                <!-- Add a link to view meetup details -->
+                <p class="text-gray-400 font-light mt-2"><strong class="uppercase">Wann:</strong> {{ meetup.date|date:"d M, Y" }}</p>
+                <p class="text-gray-400 font-light"><strong class="uppercase">Thema:</strong> {{ meetup.topic }}</p>
                 <a href="{% url 'meetup_detail' meetup.pk %}" class="mt-2 py-1 px-2 bg-forange-300 rounded-lg">Details</a>
             </div>
             {% empty %}
-            <div>No meetups found.</div>
+            <div class="text-white">Keine kommenden Treffen gefunden.</div>
             {% endfor %}
         </div>
-        
     </div>
 </div>
+    <!-- Past Meetups Section -->
+    <div class="bg-fblue-950 text-fgray pt-12 pb-16">
+        <h2 class="text-3xl font-normal text-white uppercase text-center mb-8">Vergangene Treffen</h2>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mx-24">
+            {% for meetup in past_meetups %}
+            <div class="bg-gray-800 p-4 flex flex-col justify-center items-start">
+                <h2 class="text-white text-lg font-bold">{{ meetup.title }}</h2>
+                <p class="text-gray-400 font-light mt-2"><strong class="uppercase">Wann:</strong> {{ meetup.date|date:"d M, Y" }}</p>
+                <p class="text-gray-400 font-light"><strong class="uppercase">Thema:</strong> {{ meetup.topic }}</p>
+                <a href="{% url 'meetup_detail' meetup.pk %}" class="mt-2 py-1 px-2 bg-forange-300 rounded-lg">Details</a>
+            </div>
+            {% empty %}
+            <div class="text-white">Keine vergangenen Treffen gefunden.</div>
+            {% endfor %}
+        </div>
+    </div>
+
 {% endblock %}
