--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -27,7 +27,7 @@
             <div>
                 <!-- Display the upcoming meetup details here -->
                 {% if upcoming_meetup %}
-                    <h2 class="text-3xl font-light text-white uppercase">Unser nächster Fototreff</h2>
+                    <h3 class="text-2xl font-light text-white uppercase">Unser nächster Fototreff</h2>
                     <p class="text-white font-light mt-8">
                         <strong class ="uppercase">Wann:</strong> {{ upcoming_meetup.date }}, {{ upcoming_meetup.time }} <br>
                         <strong class="uppercase">Wo:</strong> {{ upcoming_meetup.location }} <br>
@@ -80,25 +80,35 @@
             </div>
         </div>
         <div class="bg-fblue-950 pt-12">
-            <h3 class="mx-24 text-2xl font-normal text-white uppercase">Unsere neuesten Mitglieder:</h3>
             <div class="mx-24 grid grid-cols-1 md:grid-cols-2 gap-12">
                 <div>
+                    <h3 class="text-2xl font-normal text-white uppercase">Unsere neuesten Mitglieder:</h3>
                     <div class="flex justify-start items-center gap-8 mt-8">
                         {% for user in newest_users %}
-                            <div class="text-center">
+                        <div class="text-center">
+                            <a href="{% url 'members:member_detail' user.username %}">
                                 {% if user.picture %}
                                     <img src="{{ user.picture.url }}" alt="{{ user.full_name }}" class="w-24 h-24 rounded-full mx-auto">
                                 {% else %}
                                     <img src="static/images/default_profile.png" alt="Default Profile Picture" class="w-24 h-24 rounded-full mx-auto">
                                 {% endif %}
                                 <p class="text-white mt-2">{{ user.full_name }}</p>
-                            </div>
-                        {% endfor %}
+                            </a>
+                        </div>
+                    {% endfor %}
                     </div>
                 </div>
                 
-                <div class="mt-8 pb-12 flex justify-center items-center">
-                    <a href="https://discord.gg/PG3jDR7Kh7" class="bg-forange-300 py-2 px-4 rounded-lg hover:text-white font-light">Tritt unserem Discord Server bei</a>
+                <div class="">
+                    <h3 class="text-2xl font-normal text-white uppercase">Herzlich Willkommen</h2>
+                    <div class="flex justify-center flex-col items-center mt-8">
+                        <p class="text-fgray-50 font-light">
+                            Du bist herzlich eingeladen, Mitglied in unserer Fotogruppe zu werden. 
+                            Wir freuen uns über jedes neue Gesicht. 
+                            Als Mitglied kannst du an unseren Foto-Challenges und unseren Foto-Walks teilnehmen.
+                        </p>
+                        <a href="https://discord.gg/PG3jDR7Kh7" class="bg-forange-300 py-2 px-4 rounded-lg hover:text-white font-light mt-4">Tritt unserem Discord Server bei</a>
+                    </div>
                 </div>
             </div>
         </div>
