--- a/members/templates/members/member_detail.html
+++ b/members/templates/members/member_detail.html
@@ -1,8 +1,8 @@
 {% extends 'main/base.html' %}
 
 {% block content %}
-<div class="bg-fgreen-800 rounded-lg mt-12 mb-8 mx-auto w-full max-w-3/4">
-    <div class="shadow-md rounded px-8 pt-6 pb-8 mb-4">
+<div class="mt-12 mb-8 mx-auto w-full max-w-3/4">
+    <div class="rounded px-8 pt-6 pb-8 mb-4">
         <h1 class="text-2xl font-bold mb-4">{{ member.full_name }}</h1>
         <img src="{{ member.picture.url }}" alt="{{ profile.full_name }}" class="w-48 h-48 object-fit rounded-sm mb-4">
         
@@ -23,7 +23,7 @@
         
         <!-- Categories and Photos -->
         <div class="mt-8">
-            <h2 class="text-lg font-bold mb-4">Meine Kategorien</h2>
+            <h2 class="text-lg font-bold mb-4">Meine Fotos</h2>
             {% for category in member.categories.all %}
                 <div class="mb-6">
                     <h3 class="text-xl font-semibold mb-2">{{ category.name }}</h3>
