--- a/members/templates/members/member_list.html
+++ b/members/templates/members/member_list.html
@@ -1,9 +1,9 @@
 {% extends 'main/base.html' %}
 
 {% block content %}
-<div class="bg-fgreen-800 rounded-lg mt-12 mb-8 mx-auto w-full max-w-4xl">
-    <div class="bg-gray-800 shadow-md rounded px-8 pt-6 pb-8 mb-4">
-        <h1 class="text-2xl font-bold mb-4 text-center">List of Members</h1>
+<div class="mt-12 mb-8 mx-auto w-full max-w-4xl">
+    <div class="rounded px-8 pt-6 pb-8 mb-4">
+        <h1 class="text-3xl font-normal mb-4 text-center">Unsere Mitglieder</h1>
         
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 gap-4">
             {% for profile in profiles %}
