--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -53,8 +53,8 @@
                     <div class="relative group">
                         <a href="#" class="text-fgray-50 hover:bg-fgreen-500 hover:text-white px-3 py-2 rounded-md text-sm font-normal">Challenges</a>
                         <div class="absolute left-0 w-full bg-fgreen-600 rounded-b-lg opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-opacity duration-300 pointer-events-none group-hover:pointer-events-auto">
-                            <a href="{% url 'challenges:challenge_list' %}" class="text-fgray-50 block px-4 py-2 text-sm text-fgray hover:bg-fgreen-500 hover:text-white">Foto Challenges</a>
-                            <a href="{% url 'editing_list' %}" class="text-fgray-50 block px-4 py-2 text-sm text-fgray hover:bg-fgreen-500 hover:text-white">Editing Challenges</a>
+                            <a href="#" class="text-fgray-50 block px-4 py-2 text-sm text-fgray hover:bg-fgreen-500 hover:text-white">Foto Challenges</a>
+                            <a href="{% url 'editing_challenge:editing_challenge_list' %}" class="text-fgray-50 block px-4 py-2 text-sm text-fgray hover:bg-fgreen-500 hover:text-white">Editing Challenges</a>
                         </div>
                     </div>
                     <a href="{% url 'meetup_list' %}" class="text-fgray-50 hover:bg-fgreen-500 hover:text-white px-3 py-2 rounded-md text-sm font-normal">Treffen</a>
@@ -74,8 +74,8 @@
                     <div class="relative">
                         <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Challenges</a>
                         <div class="ml-4 mt-1">
-                            <a href="{% url 'challenges:challenge_list' %}" class="block px-3 py-2 rounded-md text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Foto Challenges</a>
-                            <a href="{% url 'editing_list' %}" class="block px-3 py-2 rounded-md text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Editing Challenges</a>
+                            <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Foto Challenges</a>
+                            <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Editing Challenges</a>
                         </div>
                     </div>
                     <a href="{% url 'meetup_list' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Treffen</a>
