--- a/members/templates/members/profile_edit.html
+++ b/members/templates/members/profile_edit.html
@@ -85,7 +85,8 @@
                     <h2 class="text-3xl font-bold mb-4 text-white">Admin Panel</h2>
                     <ul class="text-fgray-950">
                         <li><a href="{% url 'meetup_list_private' %}" class="bg-forange-300 py-1 px-2 rounded-lg hover:text-fgray-950">Alle Treffen verwalten</a></li>
-                        <!-- Add more admin links as needed -->
+                        <li><a href="{% url 'editing_challenge:editing_challenge_list_private' %}" class="bg-forange-300 py-1 px-2 rounded-lg hover:text-fgray-950">Editing Challenge bearbeiten</a></li>
+                        <li><a href="{% url 'photo_challenge:photo_challenge_list_private' %}" class="bg-forange-300 py-1 px-2 rounded-lg hover:text-fgray-950">Photo Challenge bearbeiten</a></li>
                     </ul>
                 {% endif %}
                 {% if user.is_authenticated %}
