--- a/meetups/templates/meetups/meetup_list.html
+++ b/meetups/templates/meetups/meetup_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h1 class="text-2xl font-bold mb-4 text- mt-12 text-center">Unsere Treffen</h1>
-<div class="bg-fgreen-600 w-screen text-fgay-50 pt-12 pb-16 mt-12">
+<div class="bg-fgreen-600 text-fgay-50 pt-12 pb-16 mt-12">
     <div class="text-fgray-50 pb-16 mb-8">
         <h2 class="text-3xl font-normal text-white uppercase text-center mb-8">Unsere nächsten Treffen</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mx-24">
