--- a/static/css/output.css
+++ b/static/css/output.css
@@ -762,16 +762,16 @@ video {
   height: 16rem;
 }
 
+.h-80 {
+  height: 20rem;
+}
+
 .h-auto {
   height: auto;
 }
 
 .h-full {
   height: 100%;
-}
-
-.h-80 {
-  height: 20rem;
 }
 
 .min-h-screen {
@@ -810,8 +810,8 @@ video {
   width: 16rem;
 }
 
-.w-96 {
-  width: 24rem;
+.w-80 {
+  width: 20rem;
 }
 
 .w-full {
@@ -822,12 +822,12 @@ video {
   width: 100vw;
 }
 
-.w-80 {
-  width: 20rem;
-}
-
 .min-w-1\/2 {
   min-width: 50%;
+}
+
+.min-w-7\/8 {
+  min-width: 87.5%;
 }
 
 .max-w-3\/4 {
@@ -1027,16 +1027,16 @@ video {
   padding: 0.25rem;
 }
 
+.p-2 {
+  padding: 0.5rem;
+}
+
 .p-4 {
   padding: 1rem;
 }
 
 .p-6 {
   padding: 1.5rem;
-}
-
-.p-2 {
-  padding: 0.5rem;
 }
 
 .px-2 {
